# tuora-core

./: .dockerignore  .gitignore  Cargo.toml  README.md  debug_keys.sh
.devin/workflows/: rust-quality-checks.md  sveltekit-quality-checks.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml  Dockerfile  build.rs  install.sh
core/assets/: signing_key.pub
core/src/: auth.rs  banner.rs  config.rs  credentials.rs  main.rs  paint.rs  progress.rs  reporter.rs  scanner.rs  telemetry.rs  types.rs  update.rs
core/src/commands/: init.rs  mod.rs  upgrade.rs  watch.rs
core/src/rules/: mod.rs  remote.rs  wasm_engine.rs
documentation/: compliance-rules.md  dashboard-spec.md  distribution.md  implementation-status.md  neon-setup.md  product-req.md  tech-req.md
types/: Cargo.toml
types/src/: lib.rs
