[package]
name = "tuora"
version = "0.3.4"
edition = "2024"
description = "Code watcher and analyzer for vibe-coded applications"
license = "Apache-2.0"

[[bin]]
name = "tuora"
path = "src/main.rs"

[dependencies]
tuora-types = { path = "../types" }

# Core async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "process"] }

# CLI and configuration
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for cloud handshake and telemetry
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Pattern matching for rule engine
regex = "1"

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# WASM Rule Engine
wasmtime = { version = "45.0", default-features = false, features = ["cranelift", "runtime"] }
bincode = "1.3"
dirs = "5.0"
ring = { version = "0.17", features = ["std"] }
base64 = "0.22"

# Filesystem watching for watch mode
notify = { version = "6" }
ignore = "0.4"

[dev-dependencies]
tempfile = "3"
